HTML olarak tamamlandı.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,93 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Time Tracking Dashboard</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="user-timezone-container">
+            <div class="user-profile">
+                <img src="assets/img/user-pic.png" alt="">
+                <span>Report for</span>
+                <h2 class="user-name">Jeremy Robson</h2>
+            </div>
+            <div class="timezone">
+                <span class="daily">Daily</span>
+                <span class="weekly active">Weekly</span>
+                <span class="monthly">Monthly</span>
+            </div>
+        </div>
+        <div class="daily-rutines-container">
+            <div class="card-container">
+                <img src="assets/img/work.svg" alt="">
+                <div class="card">
+                    <div class="header">
+                        <h2 class="title">Work</h2>
+                        <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
+                    </div>
+                    <span class="time">32hrs</span>
+                    <span class="last-week">Last Week - 36hrs</span>
+                </div>
+            </div>
+            <div class="card-container">
+                <img src="assets/img/work.svg" alt="">
+                <div class="card">
+                    <div class="header">
+                        <h2 class="title">Play</h2>
+                        <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
+                    </div>
+                    <span class="time">32hrs</span>
+                    <span class="last-week">Last Week - 36hrs</span>
+                </div>
+            </div>
+            <div class="card-container">
+                <img src="assets/img/work.svg" alt="">
+                <div class="card">
+                    <div class="header">
+                        <h2 class="title">Study</h2>
+                        <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
+                    </div>
+                    <span class="time">32hrs</span>
+                    <span class="last-week">Last Week - 36hrs</span>
+                </div>
+            </div>
+            <div class="card-container">
+                <img src="assets/img/work.svg" alt="">
+                <div class="card">
+                    <div class="header">
+                        <h2 class="title">Exercise</h2>
+                        <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
+                    </div>
+                    <span class="time">32hrs</span>
+                    <span class="last-week">Last Week - 36hrs</span>
+                </div>
+            </div>
+            <div class="card-container">
+                <img src="assets/img/work.svg" alt="">
+                <div class="card">
+                    <div class="header">
+                        <h2 class="title">Social</h2>
+                        <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
+                    </div>
+                    <span class="time">32hrs</span>
+                    <span class="last-week">Last Week - 36hrs</span>
+                </div>
+            </div>
+            <div class="card-container">
+                <img src="assets/img/work.svg" alt="">
+                <div class="card">
+                    <div class="header">
+                        <h2 class="title">Self Care</h2>
+                        <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
+                    </div>
+                    <span class="time">32hrs</span>
+                    <span class="last-week">Last Week - 36hrs</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
