--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
     <div class="container">
         <div class="user-timezone-container">
             <div class="user-profile">
-                <img src="assets/img/user-pic.png" alt="">
+                <img class="user-pic" src="assets/img/user-pic.png" alt="">
                 <span>Report for</span>
                 <h2 class="user-name">Jeremy Robson</h2>
             </div>
             <div class="timezone">
-                <span class="daily">Daily</span>
-                <span class="weekly active">Weekly</span>
-                <span class="monthly">Monthly</span>
+                <button class="timezone-btn" id="daily">Daily</button>
+                <button class="timezone-btn active" id="weekly">Weekly</button>
+                <button class="timezone-btn" id="monthly">Monthly</button>
             </div>
         </div>
         <div class="daily-rutines-container">
-            <div class="card-container">
-                <img src="assets/img/work.svg" alt="">
+            <div class="card-container" id="work">
                 <div class="card">
                     <div class="header">
                         <h2 class="title">Work</h2>
@@ -33,8 +32,7 @@
                     <span class="last-week">Last Week - 36hrs</span>
                 </div>
             </div>
-            <div class="card-container">
-                <img src="assets/img/work.svg" alt="">
+            <div class="card-container" id="play">
                 <div class="card">
                     <div class="header">
                         <h2 class="title">Play</h2>
@@ -44,8 +42,7 @@
                     <span class="last-week">Last Week - 36hrs</span>
                 </div>
             </div>
-            <div class="card-container">
-                <img src="assets/img/work.svg" alt="">
+            <div class="card-container" id="study">
                 <div class="card">
                     <div class="header">
                         <h2 class="title">Study</h2>
@@ -55,8 +52,7 @@
                     <span class="last-week">Last Week - 36hrs</span>
                 </div>
             </div>
-            <div class="card-container">
-                <img src="assets/img/work.svg" alt="">
+            <div class="card-container" id="exercise">
                 <div class="card">
                     <div class="header">
                         <h2 class="title">Exercise</h2>
@@ -66,8 +62,7 @@
                     <span class="last-week">Last Week - 36hrs</span>
                 </div>
             </div>
-            <div class="card-container">
-                <img src="assets/img/work.svg" alt="">
+            <div class="card-container" id="social">
                 <div class="card">
                     <div class="header">
                         <h2 class="title">Social</h2>
@@ -77,8 +72,7 @@
                     <span class="last-week">Last Week - 36hrs</span>
                 </div>
             </div>
-            <div class="card-container">
-                <img src="assets/img/work.svg" alt="">
+            <div class="card-container" id="selfcare">
                 <div class="card">
                     <div class="header">
                         <h2 class="title">Self Care</h2>
