Çekilen data ile başlıkların  içine data dan gelen verinin yazdırılması işlemi yapıldı.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="card-container" id="work">
                 <div class="card">
                     <div class="header">
-                        <h2 class="title">Work</h2>
+                        <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
                     <span class="time">32hrs</span>
@@ -35,7 +35,7 @@
             <div class="card-container" id="play">
                 <div class="card">
                     <div class="header">
-                        <h2 class="title">Play</h2>
+                        <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
                     <span class="time">32hrs</span>
@@ -45,7 +45,7 @@
             <div class="card-container" id="study">
                 <div class="card">
                     <div class="header">
-                        <h2 class="title">Study</h2>
+                        <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
                     <span class="time">32hrs</span>
@@ -55,7 +55,7 @@
             <div class="card-container" id="exercise">
                 <div class="card">
                     <div class="header">
-                        <h2 class="title">Exercise</h2>
+                        <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
                     <span class="time">32hrs</span>
@@ -65,7 +65,7 @@
             <div class="card-container" id="social">
                 <div class="card">
                     <div class="header">
-                        <h2 class="title">Social</h2>
+                        <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
                     <span class="time">32hrs</span>
@@ -75,7 +75,7 @@
             <div class="card-container" id="selfcare">
                 <div class="card">
                     <div class="header">
-                        <h2 class="title">Self Care</h2>
+                        <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
                     <span class="time">32hrs</span>
