Hover efektleri tamamlandı. Proje tamamlandı.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                         <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
-                    <span class="time">32hrs</span>
-                    <span class="last-week">Last Week - 36hrs</span>
+                    <span class="time"></span>
+                    <span class="last-week"></span>
                 </div>
             </div>
             <div class="card-container" id="play">
@@ -38,8 +38,8 @@
                         <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
-                    <span class="time">32hrs</span>
-                    <span class="last-week">Last Week - 36hrs</span>
+                    <span class="time"></span>
+                    <span class="last-week"></span>
                 </div>
             </div>
             <div class="card-container" id="study">
@@ -48,8 +48,8 @@
                         <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
-                    <span class="time">32hrs</span>
-                    <span class="last-week">Last Week - 36hrs</span>
+                    <span class="time"></span>
+                    <span class="last-week"></span>
                 </div>
             </div>
             <div class="card-container" id="exercise">
@@ -58,8 +58,8 @@
                         <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
-                    <span class="time">32hrs</span>
-                    <span class="last-week">Last Week - 36hrs</span>
+                    <span class="time"></span>
+                    <span class="last-week"></span>
                 </div>
             </div>
             <div class="card-container" id="social">
@@ -68,8 +68,8 @@
                         <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
-                    <span class="time">32hrs</span>
-                    <span class="last-week">Last Week - 36hrs</span>
+                    <span class="time"></span>
+                    <span class="last-week"></span>
                 </div>
             </div>
             <div class="card-container" id="selfcare">
@@ -78,8 +78,8 @@
                         <h2 class="title"></h2>
                         <button class="three-dots-btn"><img src="assets/img/three-dots.svg" alt=""></button>
                     </div>
-                    <span class="time">32hrs</span>
-                    <span class="last-week">Last Week - 36hrs</span>
+                    <span class="time"></span>
+                    <span class="last-week"></span>
                 </div>
             </div>
         </div>
